[TASK] Optimization and Naming (#1)
A lot of minor changes to optimize some wording
and naming.

Resolves: #1

--- a/Resources/Private/Language/Database.xlf
+++ b/Resources/Private/Language/Database.xlf
@@ -4,16 +4,19 @@
         <header/>
         <body>
             <trans-unit id="turnstile.formEditor.element.label">
-                <source>turnstile</source>
-            </trans-unit>
-            <trans-unit id="turnstile.formEditor.stage.validation_label">
-                <source>turnstile validation is active</source>
-            </trans-unit>
-            <trans-unit id="turnstile.formEditor.inspector.validator.select.option_label">
-                <source>turnstile</source>
+                <source>Turnstile</source>
             </trans-unit>
             <trans-unit id="turnstile.formEditor.inspector.validator.header_label">
-                <source>turnstile</source>
+                <source>Turnstile</source>
+            </trans-unit>
+            <trans-unit id="turnstile.formEditor.inspector.validator.select.option_label">
+                <source>Turnstile</source>
+            </trans-unit>
+            <trans-unit id="turnstile.formEditor.stage.validation_label">
+                <source>Turnstile validation is active</source>
+            </trans-unit>
+            <trans-unit id="formEditor.elements.FormElement.editor.label.label">
+                <source>Turnstile</source>
             </trans-unit>
         </body>
     </file>
